# poker-agent

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
poker/engine/: actions.py  cards.py  errors.py  evaluator.py  pot.py  state.py
tests/: test_cards.py  test_evaluator.py  test_pot.py  test_state.py
tests/fixtures/: hand_eval_cases.json
