[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poker-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "phevaluator",
    "pydantic-settings",
    "fastapi[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "aiosqlite",
    "alembic",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "httpx",
]

[project.scripts]
poker = "poker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["poker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
